Fixed overlap issue with blueprint side menu

--- a/global/global.css
+++ b/global/global.css
@@ -1,22 +1,22 @@
 details.ski-comp {
   border: 1px solid #aaa;
   border-radius: 4px;
-  padding: .5em .5em 0;
+  padding: 0.5em 0.5em 0;
 }
 
 details.ski-comp summary {
   font-weight: bold;
-  margin: -.5em -.5em 0;
-  padding: .5em;
+  margin: -0.5em -0.5em 0;
+  padding: 0.5em;
 }
 
 details.ski-comp[open] {
-  padding: .5em;
+  padding: 0.5em;
 }
 
 details.ski-comp[open] summary {
   border-bottom: 1px solid #aaa;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 
 div.ski-comp-sticky-top {
